# order-prediction

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: feature_pipeline.yml  inference_pipeline.yml  training_pipeline.yml
data/raw/: SundasPoDetail.xlsx
data/transformed/: monthly_features.parquet
feature_pipeline/: .env_sample  README.md
feature_pipeline/src/: db_loader.py  main.py  pipeline.py  settings.py
inference_pipeline/: Dockerfile  pyproject.toml
inference_pipeline/src/: analyze_skus.py  app.py  fetch_data.py  filter_skus.py  predict_products.py
training_pipeline/src/: combined_model.py  config.py  main.py  model_evaluator.py  model_trainer.py  pipeline.py
