[tool.poetry]
name = "inventory-predictions"
version = "0.1.0"
description = ""
authors = ["developerrr-77 <shahnoorr9955@gmail.com>"]
readme = "README.md"

packages = [
  { include = "*", from = "inference_pipeline/src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.1"
joblib = "^1.5.1"
comet-ml = "^3.50.0"
pydantic-settings = "^2.10.1"
logger = "^1.4"
statsmodels = "^0.14.5"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
scikit-learn = "^1.7.1"
prophet = "^1.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
